--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@fontsource/outfit": "^5.2.8",
     "@heroicons/react": "^2.2.0",
-    "@tailwindcss/postcss": "^4.1.17",
     "highcharts": "^12.1.2",
     "highcharts-react-official": "^3.2.1",
     "react": "^19.0.0",
