--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
   "dependencies": {
     "@fontsource/outfit": "^5.2.8",
     "@heroicons/react": "^2.2.0",
+    "@highcharts/react": "^4.1.0",
     "highcharts": "^12.1.2",
-    "highcharts-react-official": "^3.2.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router-dom": "^7.0.2"
